--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="chart">
      <attribute name="title">
@@ -212,7 +212,7 @@
             </spacer>
            </item>
            <item>
-            <widget class="QSpinBox" name="spinBox">
+            <widget class="QSpinBox" name="spVoltage">
              <property name="suffix">
               <string> V</string>
              </property>
@@ -270,7 +270,7 @@
      <x>0</x>
      <y>0</y>
      <width>735</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMenu">
